--- a/index.html
+++ b/index.html
@@ -4,67 +4,50 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Color Palette Generator</title>
-    <!-- The link below is from cdnjs, search font-awesome -->
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
-      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <h1>Color Palatte Generator</h1>
-      <button id="generate-btn">
-        <i class="fas fa-sync-alt"></i>
-        Generate Palette
-      </button>
+    <div class="menu-icon" id="hamburger-menu">
+      <i class="fas fa-bars"></i>
+    </div>
 
-      <div class="palette-container">
-        <!-- COLOR BOX 1 -->
-        <div class="color-box">
-          <div class="color" style="background-color: #f63049"></div>
-          <div class="color-info">
-            <span class="hex-value">#F63049</span>
-            <i class="far fa-copy copy-btn" title="Copy to Clipboard"></i>
-          </div>
-        </div>
-        <!-- COLOR BOX 2 -->
-        <div class="color-box">
-          <div class="color" style="background-color: #d02752"></div>
-          <div class="color-info">
-            <span class="hex-value">#D02752</span>
-            <i class="far fa-copy copy-btn" title="Copy to Clipboard"></i>
-          </div>
-        </div>
-        <!-- COLOR BOX 3 -->
-        <div class="color-box">
-          <div class="color" style="background-color: #8a244b"></div>
-          <div class="color-info">
-            <span class="hex-value">#8A244B</span>
-            <i class="far fa-copy copy-btn" title="Copy to Clipboard"></i>
-          </div>
-        </div>
-        <!-- COLOR BOX 4 -->
-        <div class="color-box">
-          <div class="color" style="background-color: #111f35"></div>
-          <div class="color-info">
-            <span class="hex-value">#111F35</span>
-            <i class="far fa-copy copy-btn" title="Copy to Clipboard"></i>
-          </div>
-        </div>
-        <!-- COLOR BOX 5 -->
-        <div class="color-box">
-          <div class="color" style="background-color: #000"></div>
-          <div class="color-info">
-            <span class="hex-value">#000000</span>
-            <i class="far fa-copy copy-btn" title="Copy to Clipboard"></i>
-          </div>
-        </div>
+    <div id="side-panel" class="side-panel">
+      <span class="close-btn" id="close-side-panel">&times;</span>
+      <div class="panel-content">
+        <button id="view-saved-palettes">
+          <i class="fas fa-heart"></i> Saved Palettes
+        </button>
       </div>
     </div>
+
+    <div id="saved-modal" class="modal">
+      <div class="modal-content">
+        <span class="close-btn" id="close-modal">&times;</span>
+        <h2>Saved Palettes</h2>
+        <div id="saved-list" class="saved-list"></div>
+      </div>
+    </div>
+
+    <div class="container">
+      <h1>Color Palette Generator</h1>
+
+      <div class="button-group">
+        <button id="generate-btn">
+          <i class="fas fa-sync-alt"></i> Generate Palette
+        </button>
+        <button id="save-btn"><i class="fas fa-heart"></i> Save Palette</button>
+      </div>
+
+      <div class="palette-container"></div>
+
+      <button id="apply-btn">Apply to theme</button>
+    </div>
+
+    <div id="custom-alert" class="custom-alert">Notification</div>
 
     <script src="script.js"></script>
   </body>
